fixing the frontend problem on firefox

--- a/greenit_website/static/styles.css
+++ b/greenit_website/static/styles.css
@@ -16,7 +16,7 @@ body {
     height: 10%;
 }
 
-.topbanner {
+.atthetopbanner {
     display: flex;
     margin-top: 0px;
     margin-right: 0px;
